# rust-nn

./: Cargo.toml  LICENSE  README.md
benches/: nn_benchmark.rs
examples/adder_gui/: Cargo.toml
examples/adder_gui/src/: main.rs
examples/learn_image/: Cargo.toml
examples/learn_image/src/: main.rs
examples/plot_learning/: Cargo.toml
examples/plot_learning/src/: main.rs
src/: activations.rs  lib.rs  matrix.rs  neural.rs  prelude.rs
src/matrix/: mod.rs  ops.rs
src/neural/: \  activations.rs  mod.rs  optimizer.rs  utils.rs
src/viz/: mod.rs
