[package]
name = "rust_nn"
version = "0.1.0"
edition = "2021"
liscense = "MIT"
description = "An educational Neural Network framework in Rust"
repository = "https://github.com/Lawqup/rust-nn"
keywords = ["neural-networks", "AI", "ML"]


[workspace]
members = ["examples/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "nn_benchmark"
harness = false
