[package]
name = "learn_image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
egui_extras = { version="0.22.0", features=["image"] }
image = "0.24.6"
lazy_static = "1.4.0"
rust_nn = { path = "../../" }
